--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Frontend Boilerplate with React and TypeScript</title>
+    <title>Simple Timeline</title>
+    <!--manifest-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   </head>
   <body>
     <div id="root"></div>
